fix bubble flickering in mobile devices

--- a/src/app/v3/v3-footer/v3-footer.component.scss
+++ b/src/app/v3/v3-footer/v3-footer.component.scss
@@ -26,7 +26,8 @@
                 border-radius: 100%;
                 -webkit-animation: bubble-size var(--time, 4s) ease-in infinite var(--delay, 0s), bubble-move var(--time, 4s) ease-in infinite var(--delay, 0s);
                 animation: bubble-size var(--time, 4s) ease-in infinite var(--delay, 0s), bubble-move var(--time, 4s) ease-in infinite var(--delay, 0s);
-                transform: translate(-50%, 100%);
+                transform: transform(-50%, 100%, 0);
+                -webkit-transform: translate3d(-50%, 100%, 0);
             }
 
             @-webkit-keyframes bubble-size {
